# chess-engine

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  run.sh
src/: CMakeLists.txt  board.hpp  entity.cpp  entity.hpp  graphics.cpp  graphics.hpp  grid.cpp  grid.hpp  main.cpp  movement.cpp  movement.hpp  piece.hpp  player.hpp  texture-handler.hpp  util.cpp  util.hpp
